--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.tutorialmod.bismuth": "Bismuth",
   "item.tutorialmod.raw_bismuth": "Raw Bismuth",
+  "item.tutorialmod.chisel": "Chisel",
 
   "block.tutorialmod.bismuth_block": "Block of bismuth",
   "block.tutorialmod.bismuth_ore": "Bismuth Ore",
