--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,9 +1,13 @@
 {
   "item.tutorialmod.bismuth": "Bismuth",
   "item.tutorialmod.raw_bismuth": "Raw Bismuth",
+  "item.tutorialmod.radish": "Radish",
+  "item.tutorialmod.frostfire_ice": "Frost fire Ice",
+  "item.tutorialmod.starlight_ashes": "Starlight Ashes",
   "item.tutorialmod.chisel": "Chisel",
 
   "block.tutorialmod.bismuth_block": "Block of bismuth",
+  "block.tutorialmod.magic_block": "Magic Block",
   "block.tutorialmod.bismuth_ore": "Bismuth Ore",
   "block.tutorialmod.bismuth_deepslate_ore": "Bismuth Deepslate Ore",
 
