--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -19,6 +19,8 @@
   "item.tutorialmod.bismuth_leggings": "Bismuth Legging",
   "item.tutorialmod.bismuth_boots": "Bismuth Boots",
 
+  "item.tutorialmod.bismuth_horse_armor": "Bismuth Horse Armor",
+
 
   "block.tutorialmod.bismuth_block": "Block of bismuth",
   "block.tutorialmod.magic_block": "Magic Block",
