--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -23,6 +23,8 @@
 
   "item.tutorialmod.bismuth_horse_armor": "Bismuth Horse Armor",
 
+  "item.tutorialmod.kaupen_bow": "Kaupen Bow",
+
 
   "block.tutorialmod.bismuth_block": "Block of bismuth",
   "block.tutorialmod.magic_block": "Magic Block",
